--- a/lib/controlato_web/templates/page/index.html.eex
+++ b/lib/controlato_web/templates/page/index.html.eex
@@ -1,6 +1,6 @@
 <section class="phx-hero">
-  <h1><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
-  <p>A productive web framework that<br/>does not compromise speed or maintainability.</p>
+  <h1><%= gettext "Welcome to %{name}!", name: "Controlato" %></h1>
+  <p>A productive web app that<br/>does not compromise speed or maintainability.</p>
 </section>
 
 <section class="row">
