--- a/monitoring/templates/context.html
+++ b/monitoring/templates/context.html
@@ -1,5 +1,10 @@
 {% extends "layout.html" %}
 {% load static %}
+
+{% block breadcrumb %}
+    <li class="breadcrumb-item active" aria-current="page">Context</li>
+{% endblock %}
+
 {% block content %}
     <h1>Context: {{ ind_context.name }}</h1>
     <hr>
